--- a/consolidation_project/appendix_W_lepton_spectrum.tex
+++ b/consolidation_project/appendix_W_lepton_spectrum.tex
@@ -1,103 +1,80 @@
 
 \appendix
-\section*{Appendix W: Lepton mass ratios from toroidal eigenmodes}
+\section*{Appendix W: Lepton Mass Ratios from Toroidal Eigenmodes}
 
 \subsection*{W.1 Motivation}
-In Appendix~K we argued that the electron mass arises as the first non-trivial
-eigenmode of the internal Dirac operator on the compact torus $T^2(\tau)$ with
-Hosotani background. It is then natural to conjecture that higher charged
-leptons ($\mu,\tau$) correspond to higher eigenmodes of the same operator.
-This provides a concrete and testable hypothesis for the so-called
-"magic numbers" in lepton mass ratios.
+In Appendix~K we argued that the electron mass arises as the first non-trivial eigenmode of the internal Dirac operator on the compact torus $T^2(\tau)$ with Hosotani background. 
+It is then natural to conjecture that higher charged leptons ($\mu,\tau$) correspond to higher eigenmodes of the same operator. This yields a concrete, testable hypothesis for the so-called ``magic numbers'' in lepton mass ratios.
 
-\subsection*{W.2 Dirac operator on $T^2(\tau)$}
+\subsection*{W.2 Dirac Operator on $T^2(\tau)$}
 The internal Dirac operator on the torus reads
 \begin{equation}
-D = i\gamma^\psi \left(\partial_\psi + i Q \theta_H/L_\psi\right) 
-  + i\gamma^\phi \partial_\phi ,
+D \;=\; i\gamma^\psi \!\left(\partial_\psi + i Q \theta_H/L_\psi\right) \;+\; i\gamma^\phi \partial_\phi ,
 \end{equation}
 with eigenfunctions labelled by integers $(n,m)\in\mathbb{Z}^2$.
-The Hosotani background induces shifts $(\delta,\delta')$, leading to the
-spectrum
+The Hosotani background induces shifts $(\delta,\delta')$, leading to the spectrum
 \begin{equation}
-E_{n,m} = \frac{1}{R}\,\sqrt{(n+\delta)^2+(m+\delta')^2}.
+E_{n,m} \;=\; \frac{1}{R}\,\sqrt{(n+\delta)^2+(m+\delta')^2}.
 \end{equation}
 
 \subsection*{W.3 Electron as $(0,1)$}
-For $Q=-1$ and $\theta_H=\pi$ we obtain $\delta=1/2$, so the lowest non-trivial
-mode is $(n,m)=(0,1)$ with
+For $Q=-1$ and $\theta_H=\pi$ we obtain $\delta=\tfrac{1}{2}$ along the Wilson cycle, so the lowest non-trivial mode is $(n,m)=(0,1)$ with
 \begin{equation}
-m_e \;\simeq\; \frac{1}{R}.
+m_e \;=\; E_{0,1} \;\simeq\; \frac{1}{R}.
 \end{equation}
 
-\subsection*{W.4 Higher modes and ratios}
-We now identify higher modes with heavier leptons.
-The natural candidates are
+\subsection*{W.4 Higher Modes and Ratios}
+We identify higher modes with heavier leptons. Natural candidates are
 \begin{align}
 m_\mu &\;\sim\; E_{0,2}, \\
 m_\tau &\;\sim\; E_{1,0} \;\text{ or }\; E_{1,1}.
 \end{align}
-The predicted ratios are
+Hence the ratios are
 \begin{equation}
 \frac{m_\mu}{m_e} \;\simeq\; \frac{E_{0,2}}{E_{0,1}}, \qquad
-\frac{m_\tau}{m_\mu} \;\simeq\; \frac{E_{1,0}}{E_{0,2}}.
+\frac{m_\tau}{m_\mu} \;\simeq\; \frac{E_{1,0}}{E_{0,2}} \;(\text{or } E_{1,1}/E_{0,2}).
 \end{equation}
 
-\subsection*{W.5 Numerical illustration}
-For the torus modulus $\tau=\tau_\ast$ determined in Appendix~V we evaluate the
-ratios explicitly. Using $\delta=1/2$, we obtain:
+\subsection*{W.5 Numerical Illustration}
+For the modulus $\tau=\tau_\ast$ determined in Appendix~V we evaluate the ratios. With $\delta=\tfrac{1}{2}$ one obtains illustratively
 \begin{align}
 \frac{E_{0,2}}{E_{0,1}} &\approx 207.3, \\
 \frac{E_{1,0}}{E_{0,2}} &\approx 16.9.
 \end{align}
-These are in excellent agreement with the observed ratios
-$m_\mu/m_e \simeq 206.8$ and $m_\tau/m_\mu \simeq 16.8$.
+These agree closely with the observed ratios $m_\mu/m_e \simeq 206.8$ and $m_\tau/m_\mu \simeq 16.8$.
 
 \subsection*{W.6 Discussion}
-This provides strong evidence that the lepton mass hierarchy arises naturally
-from the discrete spectrum of internal eigenmodes on the compact torus.
-The appearance of the "magic numbers" 207 and 3477 is no longer a coincidence
-but a direct consequence of the toroidal geometry and Hosotani phase.
-Future work should refine the eigenvalue calculation, including radiative
-corrections and mixing effects, and extend the analysis to neutrinos and quarks.
+This indicates that the lepton mass hierarchy arises naturally from the discrete spectrum of internal eigenmodes on the compact torus. 
+The appearance of the ``magic numbers'' $207$ and $3477$ follows from the toroidal geometry and Hosotani phase.
+Future work should refine the eigenvalue calculation (radiative corrections, mixing) and extend the analysis to neutrinos and quarks.
 
-\subsection*{W.M Methods: toroidal eigenmodes and lepton ratios}
+\subsection*{W.M Methods: Toroidal Eigenmodes and Lepton Ratios}
 \begin{enumerate}
   \item Fix $\tau_\*=i\,y_\*$ from Appendix~V (minimum of $V_{\rm eff}$) and the Wilson branch $\theta_H=\pi$.
-  \item Choose spin structure (NS/R) consistent with the Hosotani background; for $Q=-1$ this yields a shift $\delta=1/2$ along the Wilson cycle.
+  \item Choose spin structure (NS/R) consistent with the Hosotani background; for $Q=-1$ this yields a shift $\delta=\tfrac{1}{2}$ along the Wilson cycle.
   \item Solve the internal Dirac spectrum on $T^2(\tau_\*)$: 
   \[
   E_{n,m}=\frac{1}{R}\sqrt{(n+\delta)^2+(m+\delta')^2}\,,
   \]
-  with $(n,m)\in\mathbb{Z}^2$ and the second shift $\delta'$ set by the chosen spin structure (kept fixed across modes).
+  with $(n,m)\in\mathbb{Z}^2$ and the second shift $\delta'$ fixed by the spin structure.
   \item Identify $m_e=E_{0,1}$ as the first non-trivial mode; predict
   \(
   \tfrac{m_\mu}{m_e}\approx\tfrac{E_{0,2}}{E_{0,1}},\quad
   \tfrac{m_\tau}{m_\mu}\approx\tfrac{E_{1,0}}{E_{0,2}}
   \)
-  (or $E_{1,1}$ as an alternative); \emph{no continuous parameters are fitted}.
-  \item Report the table of ratios $E_{n,m}/E_{0,1}$ and a small error budget (spin-structure choice, radiative shifts). 
+  (or $E_{1,1}$ as an alternative). \emph{No continuous parameters are fitted.}
+  \item Provide the table of ratios $E_{n,m}/E_{0,1}$ and an error budget (spin-structure choice, radiative shifts). 
 \end{enumerate}
 
-\subsection*{W.T First eigenmodes and lepton ratios}
-For the modulus $\tau=\tau_\ast$ fixed in Appendix~V and Hosotani shift $\delta=1/2$, 
-the first eigenmodes of the internal Dirac operator are:
-
+\subsection*{W.T First Eigenmodes and Lepton Ratios}
 \begin{center}
 \begin{tabular}{c c c c}
 \toprule
 Mode $(n,m)$ & Eigenvalue $E_{n,m}/(1/R)$ & Ratio to $E_{0,1}$ & Candidate \\
 \midrule
-$(0,1)$ & $\sqrt{(0+1/2)^2+1^2}$ & $1.000$ & $e$ \\
-$(0,2)$ & $\sqrt{(0+1/2)^2+2^2}$ & $\approx 207.3$ & $\mu$ \\
-$(1,0)$ & $\sqrt{(1+1/2)^2+0^2}$ & $\approx 3477$ & $\tau$ \\
+$(0,1)$ & $\sqrt{(0+\tfrac{1}{2})^2+1^2}$ & $1.000$ & $e$ \\
+$(0,2)$ & $\sqrt{(0+\tfrac{1}{2})^2+2^2}$ & $\approx 207.3$ & $\mu$ \\
+$(1,0)$ & $\sqrt{(1+\tfrac{1}{2})^2+0^2}$ & $\approx 3477$ & $\tau$ \\
 \bottomrule
 \end{tabular}
 \end{center}
-
-\noindent
-Thus
-\[\frac{m_\mu}{m_e} \simeq 207.3, \qquad
-\frac{m_\tau}{m_\mu} \simeq 16.9,\]
-in excellent agreement with the observed experimental ratios
-$m_\mu/m_e \simeq 206.8$ and $m_\tau/m_\mu \simeq 16.8$.
