--- a/consolidation_project/appendix_V_emergent_alpha.tex
+++ b/consolidation_project/appendix_V_emergent_alpha.tex
@@ -84,3 +84,7 @@ In analogy with Appendix V, the present level of agreement is already
 \emph{strong enough to validate the mechanism}, while further refinements 
 (error budget and higher-order corrections) remain open for future work.
 
+
+
+% Cross-reference to Appendix W
+The same toroidal geometry that dynamically fixes $\alpha$ will, in Appendix~W, be shown to also determine the lepton mass spectrum. This ensures that both $\alpha$ and the hierarchy of lepton masses arise from one and the same internal structure.
