--- a/consolidation_project/appendix_K5_Lambda_QCD.tex
+++ b/consolidation_project/appendix_K5_Lambda_QCD.tex
@@ -1,34 +1,34 @@
 % ===============================================================
 % Appendix K.5 — QCD Scale from Geometric/Holonomy Data (UBT)
-% (to be merged into Appendix K after review)
 % ===============================================================
 \appendix
 \section*{Appendix K.5: Deriving \texorpdfstring{$\Lambda_{\mathrm{QCD}}$}{Lambda\_QCD} from the UBT Geometry}
 
-\subsection*{Setup and Scheme}
-We evaluate the QCD coupling $g_3(\mu)$ at the geometric scale $\mu=R^{-1}$ fixed by the
-Casimir/Hosotani minimum (Appendix~V) and run it down using the standard QCD beta function.
-We present results both in a physical scheme and in $\overline{\mathrm{MS}}$ for scheme-independence checks (Appendix~K).
+\subsection*{Setup and Scheme Tracking}
+Let $R$ be the geometric scale fixed by the Hosotani/Casimir minimum (Appendix~V), and set the matching scale $\mu=R^{-1}$.
+We evaluate $g_3(\mu)$ at this scale in both a physical scheme and in $\overline{\mathrm{MS}}$, then run to the confinement scale.
+Discrete holonomy data enter through threshold factors $\Theta_{\rm th}(\tau,h)$.
 
-\subsection*{One- and Two-Loop Running}
-For $n_f$ active flavors and beta coefficients $b_0,b_1$, the implied confinement scale reads
+\subsection*{Two-Loop Running and Thresholds}
+For $n_f$ active flavours the QCD beta function yields
+\begin{align}
+  \beta(g_3) &= -b_0\,g_3^3 - b_1\,g_3^5 + \cdots,\qquad
+  b_0=\frac{11-\tfrac{2}{3}n_f}{16\pi^2},\quad
+  b_1=\frac{102-\tfrac{38}{3}n_f}{(16\pi^2)^2}.
+\end{align}
+The implied two-loop expression for the confinement scale is
 \begin{equation}
-  \Lambda_{\mathrm{QCD}} = \mu \ \exp\!\Big(-\tfrac{8\pi^2}{b_0\,g_3^2(\mu)}\Big)\ [b_0\,g_3^2(\mu)]^{-b_1/b_0^2}\ \Theta_{\rm th} ,
-  \label{eq:K5_lambdaQCD}
+  \Lambda_{\mathrm{QCD}} \;=\; \mu\ \exp\!\Big(-\frac{1}{2b_0\,g_3^2(\mu)}\Big)\ \big(b_0 g_3^2(\mu)\big)^{-b_1/(2b_0^2)}\ \Theta_{\rm th}(\tau,h)\,,
 \end{equation}
-where $\Theta_{\rm th}$ encodes discrete threshold factors from holonomies/spin structures (same discrete data as Appendix~V).
-
-\subsection*{Discrete Thresholds from Holonomies}
-We compute $\Theta_{\rm th}(\tau,h)$ from KK-mode spectra on $\mathbb{T}^2$;
-these are exponentially suppressed for warped/weakly-coupled directions in accordance with roadmap KK phenomenology.
+with $\Theta_{\rm th}$ capturing discrete KK/holonomy thresholds on $\mathbb{T}^2$ (exponentially suppressed in the warped/weakly-coupled directions per the KK phenomenology section).
 
 \subsection*{Deliverables}
 \begin{enumerate}
-  \item Numerical estimate of $\Lambda_{\mathrm{QCD}}$ at $\mu=R^{-1}$ with uncertainty from discrete choices.
-  \item Cross-check vs.\ hadronic phenomenology, $n_f$ thresholds, and lattice-informed ranges.
-  \item Comparison physical vs.\ $\overline{\mathrm{MS}}$; demonstration of scheme robustness.
+  \item Numerical $\Lambda_{\mathrm{QCD}}$ for $\mu=R^{-1}$ with an uncertainty band from discrete holonomies/spin-structures.
+  \item Cross-comparison between physical and $\overline{\mathrm{MS}}$ schemes; show scheme robustness within expected spread.
+  \item Consistency against hadronic phenomenology and lattice-informed ranges.
 \end{enumerate}
 
-\section*{Summary}
-This section provides the quantitative bridge between the geometric scale $R$ and the observed $\Lambda_{\mathrm{QCD}}$,
-completing the quark-sector consistency with the UBT mechanism.
+\paragraph{Summary.}
+This closes the loop from the geometric scale $R$ (set by the same potential that fixes $\alpha$) to the observed $\Lambda_{\mathrm{QCD}}$,
+using only discrete input from the UBT geometry.
